Updated SEO meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Basic Setup -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/edenLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eden Garden Education Foundation </title>
+
+    <!-- Title and Description -->
+    <title>Eden Garden Education Foundation | EGEF</title>
+    <meta name="description" content="Welcome to Eden Garden Education Foundation (EGEF) — a modern platform for academic excellence, communication, and collaboration. Explore our campus, teachers, and digital resources." />
+
+    <!-- Favicon and Icons -->
+    <link rel="icon" type="image/png" href="/edenLogo.png" />
+    <link rel="apple-touch-icon" href="/edenLogo.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://egefs.com/" />
+    <meta property="og:title" content="Eden Garden Education Foundation | EGEF" />
+    <meta property="og:description" content="Explore Eden Garden Education Foundation’s official portal. Learn, connect, and grow with us." />
+    <meta property="og:image" content="https://egefs.com/social-preview.jpg" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://egefs.com/" />
+    <meta name="twitter:title" content="Eden Garden Education Foundation | EGEF" />
+    <meta name="twitter:description" content="Explore Eden Garden Education Foundation’s official portal. Learn, connect, and grow with us." />
+    <meta name="twitter:image" content="https://egefs.com/social-preview.jpg" />
+
+    <!-- SEO Meta Tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Eden Garden Education Foundation" />
+    <meta name="keywords" content="EGEF, Eden Garden, school, education, learning, foundation, e-learning, Nepal school, teachers, students" />
+    <meta name="theme-color" content="#4f46e5" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://egefs.com/" />
   </head>
   <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
